tests/fail/destruct_named_not_struct_fail.tk
shape Pair(
    A | B
)

fn main() -> i32 {
    auto p = Pair::A()
    auto Pair(a = .x, b = .y) = p
    return 0
}
