tests/fail/destruct_named_not_struct_fail.stderr
error[E0421]: Member access 'destructuring' on non-shape type 'Pair'
 --> tests/fail/destruct_named_not_struct_fail.tk:7:33
   |
 7 |     auto Pair(a = .x, b = .y) = p
   |                                 ^
